<resources>
    <string name="app_name">CalendarSimbirSoft</string>
    <string name="mainTitleActionBar">Редактировать событие</string>
    <string name="enterEventName">Введите название события</string>
    <string name="titleEventDate">Дата события</string>
    <string name="titleStartTime">Начало</string>
    <string name="titleEndTime">Конец</string>
    <string name="enterDescriptionText">Введите описание события</string>
    <string name="mainTitleCreateEvent">Создать событие</string>
    <string name="errorTimeInvalid">"Время окончания события не должно превышать времени начала и находиться в промежутке одного часа"</string>
    <string name="errorFillEventInformation">"Заполните информацию о событии"</string>
    <string name="confirmationTitle">"Подтверждение"</string>
    <string name="confirmation">"Вы уверены, что хотите удалить это событие?"</string>
    <string name="yes">"Да"</string>
    <string name="no">"Нет"</string>
    <string name="time1">00:00</string>
    <string name="time2">01:00</string>
    <string name="time3">02:00</string>
    <string name="time4">03:00</string>
    <string name="time5">04:00</string>
    <string name="time6">05:00</string>
    <string name="time7">06:00</string>
    <string name="time8">07:00</string>
    <string name="time9">08:00</string>
    <string name="time10">09:00</string>
    <string name="time11">10:00</string>
    <string name="time12">11:00</string>
    <string name="time13">12:00</string>
    <string name="time14">13:00</string>
    <string name="time15">14:00</string>
    <string name="time16">15:00</string>
    <string name="time17">16:00</string>
    <string name="time18">17:00</string>
    <string name="time19">18:00</string>
    <string name="time20">19:00</string>
    <string name="time21">20:00</string>
    <string name="time22">21:00</string>
    <string name="time23">22:00</string>
    <string name="time24">23:00</string>
</resources>