<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.EventsFragment">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/rounded_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCreateEvent"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        android:backgroundTint="@color/white"
        android:drawableBottom="@drawable/create_event"
        app:layout_constraintBottom_toBottomOf="@id/calendarView"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarView">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time1"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time2"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time3"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time4"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time5"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time6"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time7"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time8"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time9"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time10"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time11"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time12"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time13"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time14"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time15"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time16"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time17"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time18"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time19"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time20"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time21"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time22"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time23"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/time24"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:gravity="center"
                    android:text="@string/time1"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="11dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/events_items" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

